<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Masterwork Tools: Pathfinder Open Reference</string>
    <string name="search_hint">Search for article name</string>
    <string name="menu_search">Search</string>
    <string name="menu_ogl">OGL</string>
    <string name="menu_cul">Community Use License</string>
    <string name="menu_prefs">Preferences</string>
    <string name="menu_history">History</string>
    <string name="menu_community">Google+ Community</string>
    <string name="menu_toggle_toc">Toggle Find/ToC</string>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="light_grey">#CCCCCC</color>
    <color name="grey">#BBBBBB</color>
    <style name="BlackTitleTheme">
        <item name="android:background">#000000</item>
    </style>
    <style name="LargeTitleTheme">
        <item name="android:windowTitleSize">50dip</item>
        <item name="android:windowTitleBackgroundStyle">@style/BlackTitleTheme</item>
    </style>

    <string name="add_collection">Add new collection…</string>
    <string name="collection_entry_title">New Collection</string>
    <string name="collection_entry_text">What\'s the name of your new collection/character?</string>
    <string name="collection_entry_success">Added new collection.</string>
    <string name="collection_entry_failure">Couldn\'t add collection!</string>

    <string name="del_collection">Remove collection…</string>
    <string name="del_collection_entry_title">Remove Collection</string>
    <string name="del_collection_entry_text">Select collection to remove.</string>
    <string name="del_collection_entry_success">Removed collection.</string>
    <string name="del_collection_entry_failure">Couldn\'t remove collection!</string>
    <string name="search_settings_description">Masterwork Tools: Pathfinder Open Reference</string>
</resources>
