<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_search"
          android:title="@string/menu_search"
          android:icon="@drawable/ic_search"
          android:showAsAction="ifRoom"
          android:actionViewClass="android.widget.SearchView"
          android:visible="false" />
    <item android:id="@+id/menu_ogl"
          android:title="@string/menu_ogl"/>
    <item android:id="@+id/menu_cul"
          android:title="@string/menu_cul"/>
    <item android:id="@+id/menu_prefs"
          android:title="@string/menu_prefs"/>
    <item android:id="@+id/menu_history"
          android:title="@string/menu_history"/>
    <item android:id="@+id/menu_community"
          android:title="@string/menu_community"/>
</menu>